parse answer json

--- a/answer.html
+++ b/answer.html
@@ -6,7 +6,7 @@
     <body>
     <script>
         $(document).ready(() => {
-            document.body.innerHTML = JSON.stringify(getAnswer());
+            document.body.innerHTML = JSON.parse(getAnswer());
         })
     </script>
     <script src="main.e65ce0a5.js"></script>
